# pdfChatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
jupyter/: T5Model.ipynb
model/: t5.py
tests/: test_model.py
