[tool.poetry]
name = "pdfchatbot"
version = "0.1.0"
description = ""
authors = ["Skymer <darrylwwj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
transformers = "^4.48.0"
torch = { version = "^2.5.1", source = "pytorch-cpu" }
langchain-community = "^0.3.14"
sentence-transformers = "^3.3.1"
faiss-cpu = "^1.9.0.post1"
langchain = "^0.3.14"
langchain-huggingface = "^0.1.2"
pypdf = "^5.1.0"
streamlit = "^1.41.1"
simsimd = "^6.2.1"
sentencepiece = "^0.2.0"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
